--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Menlo, "Meslo LG", "Helvetica Neue", Helvetica, Arial, sans-serif,
+    "微软雅黑", monospace, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans;
+  font-size: 14px;
 }
 
 a {
@@ -13,4 +15,46 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  font-size: 1rem;
+}
+
+div,
+p,
+a {
+  /* font-weight: 300; */
+  text-rendering: geometricPrecision;
+}
+
+@media (min-width: 768px) {
+  #__next > div {
+    padding: 64px;
+  }
+}
+
+@media (max-width: 768px) {
+  #__next > div {
+    padding: 24px;
+  }
+}
+#__next > div {
+  position: relative;
+  background-color: #1d1f21;
+  min-height: 100vh;
+}
+
+#__next > div > main {
+  max-width: 560px;
+  width: 100%;
+  margin: auto;
+  color: #ccc;
 }
