--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ body {
     "微软雅黑", monospace, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans;
   font-size: 14px;
+  background-color: #1d1f21;
 }
 
 a {
